# hilarious-deep-research

./: LICENSE  README.md  pyproject.toml  requirements.txt
examples/: run_research.py  sample_topics.py  simulate_mcp_flow.py  test_mcp_server.py
output/: blog_post_how_dinosaurs_got_extinct.md  blog_post_how_neural_networks_actually_work.md  blog_post_how_social_media_algorithms_shape_reality.md  blog_post_the_economics_of_space_travel.md  blog_post_the_future_of_quantum_computing.md  blog_post_why_consciousness_is_weird.md  metadata_how_dinosaurs_got_extinct.json  metadata_how_neural_networks_actually_work.json  metadata_how_social_media_algorithms_shape_reality.json  metadata_the_economics_of_space_travel.json  metadata_the_future_of_quantum_computing.json  metadata_why_consciousness_is_weird.json
src/tim_urban_agent/: __init__.py  agent.py  config.py  server.py
src/tim_urban_agent/generators/: __init__.py  blog_generator.py  cartoon_generator.py
src/tim_urban_agent/templates/: blog_post.j2  system_prompt.j2
src/tim_urban_agent/tools/: __init__.py  image_generation_tool.py  web_search_tool.py  youtube_tool.py
src/tim_urban_agent/utils/: __init__.py  research_aggregator.py  text_processor.py
tests/: __init__.py  test_agent.py  test_tools.py
